try fix for web fonts on iOS

--- a/src/styles/web-font.css
+++ b/src/styles/web-font.css
@@ -1,3 +1,6 @@
+body {
+  text-rendering: optimizeLegibility;
+}
 @font-face {
     font-family: 'Nerd Font Mono';
     src: local('Fantasque Sans Mono Regular Nerd Font Complete Mono'), local('FantasqueSansMonoNerdFontCompleteM-Regular'),
